src/objects/Filter__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Field_Json__c</fullName>
        <label>Additional Field Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommonFilterCategory__c</fullName>
        <label>CommonFilterCategory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Sales</fullName>
                </value>
                <value>
                    <fullName>Vendor Orders</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>People</fullName>
                </value>
                <value>
                    <fullName>Settings</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Common__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Common</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reconciliation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconciliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Hidden_Column__c</fullName>
        <label>Display Hidden Column</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Addresses__c</fullName>
        <description>One or more email addresses separated by a comma.</description>
        <inlineHelpText>One or more email addresses separated by a comma.</inlineHelpText>
        <label>Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Field_Json__c</fullName>
        <label>Export Field Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Export_File_Format__c</fullName>
        <label>Export File Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_GroupBy_Field__c</fullName>
        <label>Export Group By Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Filter_JSON_Hash_Code__c</fullName>
        <label>Field Filter JSON Hash Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Filter_Json__c</fullName>
        <label>Field Filter Json 1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Filter_Json_2__c</fullName>
        <description>For large size JSON string which can not be store on already exist Field Filter Json field</description>
        <inlineHelpText>For large size JSON string which can not be store on already exist Field Filter Json field</inlineHelpText>
        <label>Field Filter Json 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filter_JSON__c</fullName>
        <label>Filter JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filter_Label__c</fullName>
        <label>Filter Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Report_Scheduled__c</fullName>
        <formula>IF(ISBLANK(TEXT(Report_Frequency__c)), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Report Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Filters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Filter__c</fullName>
        <label>Last Modified Date Filter</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Format__c</fullName>
        <description>Options are csv or pdf. Currently only csv is supported.</description>
        <inlineHelpText>Options are csv or pdf. Currently only csv is supported.</inlineHelpText>
        <label>Report Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>csv</fullName>
                </value>
                <value>
                    <fullName>pdf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Frequency__c</fullName>
        <description>Options here are Daily, Weekly or Monthly.</description>
        <inlineHelpText>Options here are Daily, Weekly or Monthly.</inlineHelpText>
        <label>Report Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_At__c</fullName>
        <description>The time of day they want the report to be generated. (10:00AM)</description>
        <inlineHelpText>The time of day they want the report to be generated. (10:00AM)</inlineHelpText>
        <label>Schedule At</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_On__c</fullName>
        <description>Acceptable values here depend on the setting of the Report Frequency.</description>
        <inlineHelpText>Acceptable values here depend on the setting of the Report Frequency.</inlineHelpText>
        <label>Schedule On</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Report_Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>1st day</fullName>
                </value>
                <value>
                    <fullName>Last day</fullName>
                </value>
                <value>
                    <fullName>15th day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_All_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show All Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Json__c</fullName>
        <label>Sort Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_Field_Json__c</fullName>
        <label>Summary Field Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To set item to favorite item</description>
        <label>favorite</label>
        <type>Checkbox</type>
    </fields>
    <label>Filter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Filter_Label__c</columns>
        <columns>Filter_User__c</columns>
        <columns>CommonFilterCategory__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Custom__c</columns>
        <columns>Filter_JSON__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Common__c</columns>
        <columns>favorite__c</columns>
        <columns>Field_Filter_JSON_Hash_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Filter_Label__c</columns>
        <columns>NAME</columns>
        <columns>Additional_Field_Json__c</columns>
        <columns>Common__c</columns>
        <columns>CommonFilterCategory__c</columns>
        <columns>Custom__c</columns>
        <columns>Display_Hidden_Column__c</columns>
        <columns>Export_Field_Json__c</columns>
        <columns>Export_File_Format__c</columns>
        <columns>Export_GroupBy_Field__c</columns>
        <columns>favorite__c</columns>
        <columns>Field_Filter_Json__c</columns>
        <columns>Field_Filter_JSON_Hash_Code__c</columns>
        <columns>Filter_JSON__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Ashish</fullName>
        <columns>NAME</columns>
        <columns>Filter_Label__c</columns>
        <columns>Common__c</columns>
        <columns>Custom__c</columns>
        <columns>favorite__c</columns>
        <columns>Filter_User__c</columns>
        <columns>Field_Filter_JSON_Hash_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filter_User__c</field>
            <operation>equals</operation>
            <value>Ashish Garg</value>
        </filters>
        <label>Ashish</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bhawna</fullName>
        <columns>NAME</columns>
        <columns>Filter_Label__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Additional_Field_Json__c</columns>
        <columns>Common__c</columns>
        <columns>CommonFilterCategory__c</columns>
        <columns>Custom__c</columns>
        <columns>Display_Hidden_Column__c</columns>
        <columns>Export_Field_Json__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filter_User__c</field>
            <operation>contains</operation>
            <value>Bhawna</value>
        </filters>
        <label>Bhawna</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Common</fullName>
        <columns>NAME</columns>
        <columns>Filter_Label__c</columns>
        <columns>favorite__c</columns>
        <columns>Filter_User__c</columns>
        <columns>Field_Filter_JSON_Hash_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Common__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Common</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dinesh</fullName>
        <columns>NAME</columns>
        <columns>Filter_Label__c</columns>
        <columns>Common__c</columns>
        <columns>Custom__c</columns>
        <columns>Filter_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filter_User__c</field>
            <operation>equals</operation>
            <value>Dinesh Kumar</value>
        </filters>
        <label>Dinesh</label>
    </listViews>
    <listViews>
        <fullName>Nidhi</fullName>
        <columns>NAME</columns>
        <columns>Filter_Label__c</columns>
        <columns>Filter_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filter_User__c</field>
            <operation>equals</operation>
            <value>Nidhi Sharma</value>
        </filters>
        <label>Nidhi</label>
    </listViews>
    <listViews>
        <fullName>Preview_records_TK</fullName>
        <columns>NAME</columns>
        <columns>Filter_Label__c</columns>
        <columns>Filter_User__c</columns>
        <columns>Common__c</columns>
        <columns>Custom__c</columns>
        <columns>favorite__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filter_Label__c</field>
            <operation>equals</operation>
            <value>Preview Report</value>
        </filters>
        <label>Preview records</label>
    </listViews>
    <listViews>
        <fullName>Tarun</fullName>
        <columns>NAME</columns>
        <columns>Filter_Label__c</columns>
        <columns>Common__c</columns>
        <columns>Custom__c</columns>
        <columns>favorite__c</columns>
        <columns>Field_Filter_JSON_Hash_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filter_User__c</field>
            <operation>equals</operation>
            <value>Tarun Khandelwal</value>
        </filters>
        <label>Tarun</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>